--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-responsive-modal": "^7.0.0",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yet-another-react-lightbox": "^3.20.2"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
