--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.417.0",
     "next": "15.5.9",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
